[package]
name = "ddclient-rs"
version = "0.1.1"
edition = "2021"
description = "A Rust client library for the Direct Decisions API."
license = "BSD-3-Clause"
repository = "https://github.com/directdecisions/ddclient-rs"
homepage = "https://directdecisions.com/"
authors = ["Petar Radovic <petar.radovic@gmail.com>"]
keywords = ["api", "client", "direct-decisions"]


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {  version = "1.0.193", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0.108"
url-escape = "0.1.1"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
http = "0.2.11"

